# animated-doodle

./: README.md  docker-compose.yml
api/: Cargo.toml
api/src/: db.rs  errors.rs  init.rs  main.rs  models.rs
web/: package-lock.json  package.json
web/components/: chat-room.tsx
web/hooks/: api-health-checker.ts  chat-room.ts  identity.ts  room-control.ts
web/pages/: index.tsx
web/pages/chat/: [[...room]].tsx
web/styles/: Home.module.css
