[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4.6", features = ["json"] }
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
chrono = "0.4.19"
fastrand = "1.7.0"
http = "0.2.6"
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.3", features = ["cors"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
